This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
6/14/17: Fixed setting of drift settling for Eagle through plugin/server
(In 3.6).

6/9/17: SEM_3-6-9
6/2/17: Fixed use of K2 asynchronous readout to RAM when frame alignment is
selected (In 3.6).

5/25/17: Fixed reporting of frames saved and writing to frame mdoc when frame
saving is turned on for aligning in IMOD (In 3.6).

5/25/17: Made it restore the correct focus when autofocus is aborted after
starting from Low Dose View mode (In 3.6).

5/23/17: Script commands writing to an autodoc can write to global section if
there are no images yet.

5/23/17: Fixed SetUserSetting command for integer value, added update call
after this command so changes propagate through system.

5/17/17: Script processor now searches in current script first for a
function with no script name in front of it, thus allowing duplicate
function names in other scripts.

5/16/17: Fixed initial script checking to allow calling a function from both
another script and the script it is in (In 3.6).

5/7/17: Added script commands for getting and setting condenser-image plane
distance offset on Titan.

5/6/17: When "Align in IMOD" is selected for K2 frames, it will automatically
turn on frame saving but retain the user's setting for this (In 3.6).

5/3/17: Fixed setting of X beam tilt with adjustment in coma-free routine,
broken 2/26/17.

4/25/17: SEM_3-6-8
4/24/17: Realign to Item stays in Low Dose even if spot size or filter
settings change; the map settings are still applied.  Also it stays in Low
Dose if View defocus offset changes by up to 20 microns. (In 3.6).

4/23/17: Fixed storage of last time done when hardware dark reference is
updated (In 3.6).

4/23/17: Fixed AddToAutodoc command to release autodoc mutex (In 3.6).

4/20/17: SEM_3-6-7