@@ -277,6 +277,7 @@ INT_PROP_TEST("TSMinFitXAfterDrop", tsController->, MinFitXAfterDrop)
 INT_PROP_TEST("TSMinFitYAfterDrop", tsController->, MinFitYAfterDrop)
 INT_PROP_TEST("TSMinFitZAfterDrop", tsController->, MinFitZAfterDrop)
 BOOL_PROP_TEST("TSEarlyK2RecordReturn", tsController->, EarlyK2RecordReturn)
+FLOAT_PROP_TEST("TSTrialCenterMaxRadFrac", tsController->, TrialCenterMaxRadFrac)
 FLOAT_PROP_TEST("BeamCalMinField", beamAssessor->, CalMinField)
 FLOAT_PROP_TEST("BeamCalExtraRangeNeeded", beamAssessor->, ExtraRangeAtMinMag)
 INT_PROP_TEST("BeamCalMinCounts", beamAssessor->, MinCounts)
