@@ -2697,6 +2697,12 @@
             4).</TD>
         </TR>
         <TR VALIGN="top">
+          <TD>TSTrialCenterMaxRadFrac</TD>
+          <TD>When centering beam from Trial image, maximum fitted radius of the beam that 
+            is acceptable for moving beam as a fraction of the image diagonal (default 
+            0.45).</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD>TSEarlyK2RecordReturn</TD>
           <TD>Set to 1 to have Record or Extra Record images on a K2 camera with saving of 
             dose-fractionation frames return as soon as the full summed image is ready, with 
