@@ -199,7 +199,9 @@
         mis-centering the beam when the edge of a grid bar is in the image. To use this 
         option, you should set the intensity for the Trial area so the beam edges 
         occupy all four corners; a size midway between those of the circumscribed and 
-        the inscribed circles should work.</P>
+        the inscribed circles should work.&nbsp; If necessary, the maximum radius 
+        allowed can be changed with the property TSTrialCenterMaxRadFrac, which is 0.45 
+        by default.</P>
       <P><B>Autocenter beam every X minutes</B></P>
       <P>Select this option to have the beam autocentering routine that is used with the <A HREF="menu_tasks.htm#hid_tasks_autocenterbeam">
           Autocenter Beam command</A> run periodically during a tilt series. The 
