@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+6/15/17: Added property to set the maximum beam radius allowed when centering
+beam with low dose tracking images in tilt series (In 3.6).
+
 6/14/17: Fixed setting of drift settling for Eagle through plugin/server
 (In 3.6).
 
